fixed spacing for seo easy upload frictionless qa variant

--- a/express/code/blocks/frictionless-quick-action/easy-upload/easy-upload.css
+++ b/express/code/blocks/frictionless-quick-action/easy-upload/easy-upload.css
@@ -35,6 +35,10 @@ main .section .qr-code-dropzone-content .easy-upload-secondary .tooltip {
   display: none;
 }
 
+.dropzone.easy-upload-initial {
+  padding: 0px 64px;
+}
+
 .dropzone-container.hidden {
   display: none;
 }
@@ -55,6 +59,8 @@ main .section .qr-code-dropzone-content .easy-upload-secondary .tooltip {
   height: 24px;
   gap: 8px;
   margin: 0;
+  
+  padding: var(--spacing-200) 0 var(--spacing-75) 0;
 }
 
 .easy-upload-initial .easy-upload-or::before,
@@ -68,34 +74,61 @@ main .section .qr-code-dropzone-content .easy-upload-secondary .tooltip {
 .easy-upload-initial .easy-upload-or span {
   color: #242424;
   text-align: center;
-  font-family: var(--Family-font-family-title, "Adobe Clean Spectrum VF");
+   
   font-size: var(--Global-Typography-Size-Title-Title-XS, 18px);
   font-style: normal;
   font-weight: 700;
   line-height: var(--Global-Typography-Line-height-Title-Title-XS, 24px);
+  border-radius: 999px;
 }
 
 .easy-upload-initial .easy-upload-cta-row {
   display: flex;
   gap: 8px;
   align-items: center;
-  width: fit-content;
+  padding: 0;
   margin: 0;
+  padding-bottom: var(--spacing-300);
+  padding-top: var(--spacing-200);
 }
 
 .easy-upload-initial .easy-upload-cta-row .button-container {
-  flex: 0 0 231px;
   margin: 0;
+  flex-grow: 1;
 }
 
 .easy-upload-initial .easy-upload-cta-row .button-container .button {
   height: 23px;
   padding: 12px 16px 13px;
-  box-sizing: content-box;
-  width: 100%;
+  box-sizing: content-box; 
   display: flex;
   align-items: center;
+  margin: 0;
   justify-content: center;
+  border-radius: 9999px;
+  gap: 8px;
+}
+
+.easy-upload-initial .easy-upload-cta-row .button-container .button .icon {
+  width: 22px;
+  height: 22px;
+  flex-shrink: 0;
+}
+
+.easy-upload-initial .easy-upload-cta-row .button-container:last-child .button,
+.easy-upload-initial .easy-upload-cta-row .button-container:last-child .button.accent {
+  background: #fff;
+  border: 2px solid #B3B3B3;
+  color: #242424;
+}
+
+.easy-upload-initial .easy-upload-cta-row .button-container:last-child .button:hover,
+.easy-upload-initial .easy-upload-cta-row .button-container:last-child .button.accent:hover {
+  background: #F5F5F5;
+}
+
+.easy-upload-initial .easy-upload-cta-row .button-container:last-child .button .icon {
+  filter: brightness(0);
 }
 
 .qr-code-dropzone-content {
